# trdr

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
docs/: ARCHITECTURE.md  DSL_REFERENCE.md
examples/: first-strat.trdr  script.py
examples/no_telemetry/: script.py
examples/strategies/: first-strat.trdr
examples/with_telemetry/: script.py
src/examples/: first-strat.trdr
src/trdr/: conftest.py
src/trdr/core/: bar.py  condition.py  data_provider.py  indicator.py  rule.py  strategy.py  timeframe.py
src/trdr/core/bar_provider/: base_bar_provider.py  exceptions.py  models.py  yf_bar_provider.py
src/trdr/core/broker/: alpaca_broker.py  base_broker.py  mock_broker.py  models.py  test_order_model.py  test_position_model.py
src/trdr/core/brokers/: interfaces.py  models.py
src/trdr/core/data/: bar.py  base_data_provider.py  interfaces.py  models.py
src/trdr/core/money/: money.py
src/trdr/core/portfolio/: base_portfolio.py  exceptions.py  models.py  portfolio.py
src/trdr/core/security_provider/: base_security_provider.py  models.py  security_provider.py  test_security_model.py  test_security_provider.py
src/trdr/core/shared/: enums.py  (+2 more)
src/trdr/dsl/: dsl_ast.py  dsl_loader.py  lexer.py  parser.py
src/trdr/parser/: lexer.py
src/trdr/telemetry/: __init__.py  config.py  instrumentation.py  null_telemetry.py
src/trdr/test_utils/: fake_yf_download.py  order_generator.py  security_generator.py
src/trdr/utils/: security_generator.py
tests/: test_strat1.py
tests/providers/: test_yf_provider.py
(+27 files in other folders)
